--- a/localisation/X_l_english.yml
+++ b/localisation/X_l_english.yml
@@ -7,7 +7,8 @@
  #Tooltips
  X_center_of_trade_effect_tt:0 "Add the equivalent Center of Trade upgrade cost to your treasury."
  X_flatland_terrain_trigger_tt:0 "Province(s) is §lFlatland§! terrain."
- X_home_node_merchant_decision_tt:0 "Gain §G+1§! Merchant."
+ X_home_node_merchant_decision_tt:0 "Has a Center of Trade of level §Y3§!."
+ X_home_node_merchant_decision_tt2:0 "Gain §G+1§! Merchant."
  #Provinces
  PROV6213:0 "Karasu"
  PROV6213_ADJ:0 "Karasu"
